--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:             your-email@example.com
 description:       A Blog Theme by Start Bootstrap
 author:            Start Bootstrap
 baseurl:           "blog"
-url:               "https://strikerdd.github.io"
+url:               "https://strikerdd.github.io/blog"
 
 # Social Profiles
 twitter_username:  SBootstrap
