edited url and baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:             Clean Blog
 email:             your-email@example.com
 description:       A Blog Theme by Start Bootstrap
 author:            Start Bootstrap
-baseurl:           "blog"
-url:               "https://strikerdd.github.io/blog"
+baseurl:           ""
+url:               "https://strikerdd.github.io/"
 
 # Social Profiles
 twitter_username:  SBootstrap
