added on to URL

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:             your-email@example.com
 description:       A Blog Theme by Start Bootstrap
 author:            Start Bootstrap
 baseurl:           ""
-url:               "https://strikerdd.github.io/"
+url:               "https://strikerdd.github.io/StrikerDD.github.io-blog/"
 
 # Social Profiles
 twitter_username:  SBootstrap
