--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:             Clean Blog
 email:             your-email@example.com
 description:       A Blog Theme by Start Bootstrap
 author:            Start Bootstrap
-baseurl:           ""
-url:               "https://strikerdd.github.io/StrikerDD.github.io-blog/"
+baseurl:           "StrikerDD.github.io-blog"
+url:               "https://strikerdd.github.io/"
 
 # Social Profiles
 twitter_username:  SBootstrap
