--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:             Clean Blog
+title:             IT Collaboration Blog
 email:             dstriker@corus360.com
 description:       A Blog Theme by Start Bootstrap
 author:            David Striker
