--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:             IT Collaboration Blog
+title:             IT Collaboration and Support Blog
 email:             dstriker@corus360.com
-description:       A Blog Theme by Start Bootstrap
+description:       Knowledge Base for Collaboration and Support Efforts. 
 author:            David Striker
 baseurl:           ""
 url:               "https://strikerdd.github.io/"
