--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:             IT Collaboration and Support Blog
-email:             dstriker@corus360.com
+email:             djstrik888@gmail.com
 description:       Knowledge Base for Collaboration and Support Efforts. 
 author:            David Striker
 baseurl:           ""
