--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:             IT Collaboration and Support Blog
+title:             IT Collaboration Blog
 email:             djstrik888@gmail.com
 description:       Knowledge Base for Collaboration and Support Efforts. 
 author:            David Striker
